--- a/pages/catchjj/css/jj.css
+++ b/pages/catchjj/css/jj.css
@@ -97,7 +97,7 @@
     position: absolute;
     width: 140px;
     height: 140px;
-    background: url(https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/b4f3366bf29642b599865ef2aaae2933~tplv-k3u1fbpfcp-watermark.image);
+    background: url(./images/Run_000.c98fa765.png);
     background-size: 100%;
     top: 50%;
     margin-top: -70px;
