--- a/pages/catchjj/css/jj.css
+++ b/pages/catchjj/css/jj.css
@@ -97,7 +97,7 @@
     position: absolute;
     width: 140px;
     height: 140px;
-    background: url(./images/Run_000.c98fa765.png);
+    background: url('../img/a.png');
     background-size: 100%;
     top: 50%;
     margin-top: -70px;
